output/context/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestUnwrappedWithPrefix.java
public MapUnwrap()
public MapUnwrap(String key, Object value)
public void testMapUnwrapSerialize() throws Exception
public void testMapUnwrapDeserialize() throws Exception
ObjectMapper mapper=Optional[new ObjectMapper()]
